New command line option "--persist".

- 1.24 released -

Support the new distribution ISO naming scheme, e.g.,
NetBSD-5.99.60-sparc.iso instead of sparccd.iso.

Support installation of the X11 and source sets.

On unknown platforms, use mkisofs instead of genisoimage.

On sparc, the scratch disk is sd1c, not wd1d.

Allow a full hour for extracting sets.

Deal with the backwards incompatible renaming of "qemu" to
"qemu-system-i386" in qemu 1.0.

After running the ATF tests, run "ps" to show any processes possibly
left running by the tests.

- 1.23 released -

Support qemu 0.15, where the output of the "info block" monitor
command has backwards-incompatibly changed to no longer include a
"type" field.

- 1.22 released -

New command line option "--memory-size".

- 1.21 released -

Disk images no longer contain holes, making them easier to use with
vnd(4).  Partially based on patch from Vladimir Kirillov.

Increase the default disk size from 512M to 768M, as 512M is no longer
sufficient for amd64.

- 1.20 released -

Run df before and after the ATF tests so that disk usage data
can be gathered from the test logs.

Increase the default timeout for the ATF test from 1 hour to 2 hours
as the number of tests has now increased to a point where 1 hour is
not always enough even on a fast machine.

Increase the timeout for the set extraction phase from 1200 to 2400
seconds; the extra time is needed when installing a system built
without optimization.

- 1.19 released -

Rename the --qemu-args option to --vmm-args in preparation for adding
support for other virtual machine monitors in addition to qemu.

Fix typos found by Antti Kantee and Jean-Yves Migeon.

Deprecate the --qemu-args -no-kvm-irqchip workaround, as it doesn't
quite work.

Add support for MacOS X hosts, from Jeff Rizzo.

New command line option "--test-timeout".

Deal with yet another seemingly nondeterministic "Press enter to
continue" prompt.

- 1.18 released -
