@@ -1,3 +1,7 @@
+Untested, experimental support for using Xen instead of qemu as the
+virtual machine monitor.  Enabled by specifying "--vmm xen" on the
+anita command line while running as root in a Xen dom0.
+
 New command line option "--persist".
 
 - 1.24 released -
